--- a/VATAVR-website/src/app/components/navbar/navbar.component.html
+++ b/VATAVR-website/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
       <!-- Apply Boostrap CSS class 'active' if the routeLink exactly matches '/home' -->
       <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"
           [routerLink]="['/Home']">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/Home">Dashboard <span class="sr-only">(current)</span></a>
       </li>
     </ul>
     <ul  class="navbar-nav">
