--- a/VATAVR-website/src/app/components/register/register.component.html
+++ b/VATAVR-website/src/app/components/register/register.component.html
@@ -18,6 +18,21 @@
                name="email">
       </div>
       <div class="form-group row">
+        <label for="phoneNumber">Phone Number</label>
+        <input type="text" class="form-control" id="phoneNumber" [required]="true"
+               [(ngModel)]="registrationInfo.phoneNumber" minlength="1" name="phoneNumber">
+      </div>
+      <div class="form-group row">
+        <label for="userType">Are you a doctor or a patient</label>
+        <!-- <input type="text" class="form-control" id="userType" [required]="true"
+               [(ngModel)]="registrationInfo.userType" minlength="1" name="userType"> -->
+          <div>
+            <input type="radio" class="form-control" id="userType" [required]="true" [(ngModel)]="registrationInfo.userType" minlength="1"name="userType" value="Doctor"> Doctor<br>
+            <input type="radio" class="form-control" id="userType" [required]="true" [(ngModel)]="registrationInfo.userType" minlength="1"name="userType" value="Patient"> Patient<br>
+         
+          </div>
+      </div>
+      <div class="form-group row">
         <label for="username">Username</label>
         <input type="text" class="form-control" id="username" [required]="true"
                [(ngModel)]="registrationInfo.username" minlength="1" name="username">
