--- a/VATAVR-website/src/app/components/home/home.component.html
+++ b/VATAVR-website/src/app/components/home/home.component.html
@@ -27,7 +27,7 @@
   <div class="lowerContainer">
       <div class="people">
           <div class="profile">
-              <img class="me" src="assets/me.png">
+              <img class="me" src="https://www.skylightsearch.co.uk/wp-content/uploads/2017/01/Hayley-profile-pic-circle.png">
               <div class="profileItem">
                   <div class="name">Username</div>
                   <div class="detail">Age: 53</div>
@@ -36,7 +36,7 @@
               
           </div>
           <div class="profile">
-              <img class="me" src="assets/doctor.png">
+              <img class="me" src="https://37e04m2dcg7asf2fw4bk96r1-wpengine.netdna-ssl.com/wp-content/uploads/2015/07/dr-arnold-profile-in-circlePS-400.png">
               <div class="profileItem">
                   <div class="name">Dr.Stone</div>
                   <div class="detail">1236784213</div>
