--- a/VATAVR-website/src/app/components/emr/emr.component.html
+++ b/VATAVR-website/src/app/components/emr/emr.component.html
@@ -23,7 +23,7 @@
         <div class="profile doctorProfile">
             <img class="me" src="https://www.skylightsearch.co.uk/wp-content/uploads/2017/01/Hayley-profile-pic-circle.png">
             <div class="profileItem">
-                <div class="name">Patient</div>
+                <div class="name">Sarah</div>
                 <div class="detail">Age: 53</div>
                 <div class="detail">Gender: Female</div>
             </div>
@@ -33,9 +33,9 @@
         <div class="profile doctorProfile">
             <img class="me" src="https://www.scripturaengage.com/wp-content/uploads/2018/01/Profile-Picture-Lee-Sneyers-Circle.png">
             <div class="profileItem">
-                <div class="name">Patient</div>
-                <div class="detail">Age: 53</div>
-                <div class="detail">Gender: Female</div>
+                <div class="name">Alonzo</div>
+                <div class="detail">Age: 35</div>
+                <div class="detail">Gender: Male</div>
             </div>
             
         </div>
@@ -43,8 +43,8 @@
         <div class="profile doctorProfile">
             <img class="me" src="https://www.scripturaengage.com/wp-content/uploads/2017/03/Profile-Picture-Joke-Dehond-Circle.png">
             <div class="profileItem">
-                <div class="name">Patient</div>
-                <div class="detail">Age: 53</div>
+                <div class="name">Rebecca</div>
+                <div class="detail">Age: 50</div>
                 <div class="detail">Gender: Female</div>
             </div>
             
@@ -53,9 +53,9 @@
         <div class="profile doctorProfile">
             <img class="me" src="https://i2.wp.com/www.coachcarson.com/wp-content/uploads/2018/09/Chad-Profile-pic-circle.png?ssl=1">
             <div class="profileItem">
-                <div class="name">Patient</div>
-                <div class="detail">Age: 53</div>
-                <div class="detail">Gender: Female</div>
+                <div class="name">Chad</div>
+                <div class="detail">Age: 30</div>
+                <div class="detail">Gender: Male</div>
             </div>
             
         </div>
@@ -63,18 +63,18 @@
         <div class="profile doctorProfile">
             <img class="me" src="https://www.sccpre.cat/mypng/full/14-141138_facebook-teerasej-profile-ball-circle-sochiie-com-facebook.png">
             <div class="profileItem">
-                <div class="name">Patient</div>
-                <div class="detail">Age: 53</div>
-                <div class="detail">Gender: Female</div>
+                <div class="name">David</div>
+                <div class="detail">Age: 34</div>
+                <div class="detail">Gender: Male</div>
             </div>
             
         </div>
        
     </div>       
-        <div class="userContainer">
+        <div class="userContainer sarah">
             <div class="doctorcontainer">
                 <div class="header">
-                    <div class="chartName">Shannon's VATA</div>
+                    <div class="chartName">Sarah's VATA</div>
                     <button class="toggle" type="button" (click)="toggle()">Toggle View</button>
                 </div>
                 <table id="table">
