--- a/VATAVR-website/src/app/components/home/home.component.html
+++ b/VATAVR-website/src/app/components/home/home.component.html
@@ -29,7 +29,7 @@
           <div class="profile">
               <img class="me" src="https://www.skylightsearch.co.uk/wp-content/uploads/2017/01/Hayley-profile-pic-circle.png">
               <div class="profileItem">
-                  <div class="name">Username</div>
+                  <div class="name">Sarah</div>
                   <div class="detail">Age: 53</div>
                   <div class="detail">Gender: Female</div>
               </div>
