--- a/VATAVR-website/src/app/components/home/home.component.scss
+++ b/VATAVR-website/src/app/components/home/home.component.scss
@@ -8,7 +8,7 @@ text {
     padding: 1rem;
 }
 .container {
-    padding: 5rem 0;
+    padding: 2rem 0rem 0rem 0rem;
     background-color: white;
     margin-right: 80px;
 }
