--- a/VATAVR-website/src/app/components/login/login.component.html
+++ b/VATAVR-website/src/app/components/login/login.component.html
@@ -22,8 +22,8 @@
         <!-- <input type="text" class="form-control" id="userType" [required]="true"
                [(ngModel)]="registrationInfo.userType" minlength="1" name="userType"> -->
           <div>
-            <input type="radio" class="form-control" id="userType" [required]="true" [(ngModel)]="credentials.userType" minlength="1"name="userType" value="Doctor"> Doctor<br>
-            <input type="radio" class="form-control" id="userType" [required]="true" [(ngModel)]="credentials.userType" minlength="1"name="userType" value="Patient"> Patient<br>
+            <input type="radio" id="userType" [required]="true" [(ngModel)]="credentials.userType" minlength="1"name="userType" value="Doctor"> Doctor<br>
+            <input type="radio" id="userType" [required]="true" [(ngModel)]="credentials.userType" minlength="1"name="userType" value="Patient"> Patient<br>
          
           </div>
       </div>
