--- a/VATAVR-website/src/app/components/login/login.component.scss
+++ b/VATAVR-website/src/app/components/login/login.component.scss
@@ -3,6 +3,9 @@
   width: 100vw;
   height: 100%;
 }
+.body-container {
+  background-color: #607D8B; 
+}
 
 /* Center the login container horizontally and vertically */
 .login-form-container {
@@ -11,10 +14,14 @@
   transform: translate(-50%, -50%);
   position: absolute;
   width: 50vw;
-  height: 57vh;
+  height: auto;
   background-color: white;
   padding: 2%;
   box-shadow: 5px 10px 18px rgba(20, 26, 35, 0.78);
+}
+.form-control {
+  display: flex;
+  align-content: center;
 }
 
 .alert-container {
