--- a/VATAVR-website/src/app/components/navbar/navbar.component.html
+++ b/VATAVR-website/src/app/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
         <a class="nav-link" href="/EMR">EMR <span class="sr-only">(current)</span></a>
       </li>
     </ul>
-    <ul  class="navbar-nav">
+    <ul  class="navbar-nav login">
       <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"
           [routerLink]="['/Login']">
         <a class="nav-link" href="#">Login</a>
