--- a/VATAVR-website/src/app/components/register/register.component.html
+++ b/VATAVR-website/src/app/components/register/register.component.html
@@ -23,12 +23,13 @@
                [(ngModel)]="registrationInfo.phoneNumber" minlength="1" name="phoneNumber">
       </div>
       <div class="form-group row">
-        <label for="userType">Are you a doctor or a patient</label>
+        <label for="userType">Are you a doctor or a patient?       </label>
+        
         <!-- <input type="text" class="form-control" id="userType" [required]="true"
                [(ngModel)]="registrationInfo.userType" minlength="1" name="userType"> -->
-          <div>
-            <input type="radio" class="form-control" id="userType" [required]="true" [(ngModel)]="registrationInfo.userType" minlength="1"name="userType" value="Doctor"> Doctor<br>
-            <input type="radio" class="form-control" id="userType" [required]="true" [(ngModel)]="registrationInfo.userType" minlength="1"name="userType" value="Patient"> Patient<br>
+          <div class="radioButtons">
+            <input type="radio"  id="userType" [required]="true" [(ngModel)]="registrationInfo.userType" minlength="1"name="userType" value="Doctor"> Doctor<br>
+            <input type="radio"  id="userType" [required]="true" [(ngModel)]="registrationInfo.userType" minlength="1"name="userType" value="Patient"> Patient<br>
          
           </div>
       </div>
