--- a/VATAVR-website/src/app/components/register/register.component.scss
+++ b/VATAVR-website/src/app/components/register/register.component.scss
@@ -1,17 +1,18 @@
 .register-container {
   position: absolute;
   width: 100vw;
-  height: 100%;
+  height: 1000px;
 }
 
 /* Center the login container horizontally and vertically */
 .register-form-container {
-  top: 45%;
+  top: 25%;
   left: 50%;
+  margin-top: 250px;
   transform: translate(-50%, -50%);
   position: absolute;
   width: 70vw;
-  height: 86%;
+  height: auto;
   background-color: white;
   padding: 5%;
   box-shadow: 5px 10px 18px rgba(20, 26, 35, 0.78);
@@ -24,5 +25,8 @@
 .button-container {
   padding-top: 5%;
   text-align: center;
+}
+.radioButtons {
+  margin-left: 20px;
 }
 
