--- a/VATAVR-website/src/app/components/login/login.component.html
+++ b/VATAVR-website/src/app/components/login/login.component.html
@@ -28,7 +28,7 @@
           </div>
       </div>
       <div class="button-container">
-        <button type="submit" class="btn btn-primary" (click)="login()" [disabled]="!loginForm.form.valid">Login
+        <button type="submit" class="btn btn-primary" (click)="login(); saveUsername();" [disabled]="!loginForm.form.valid">Login
         </button>
       </div>
     </form>
